<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select" />

    <Button
        android:id="@+id/eurogamerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eurogamer" />

    <Button
        android:id="@+id/joystiqButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joystiq" />

    <Button
        android:id="@+id/kotakuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kotaku" />

    <Button
        android:id="@+id/rpsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rps" />

    <Button
        android:id="@+id/otherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other" />

</LinearLayout>
